@@ -9,12 +9,12 @@
     Culture of the Czech Republic.
 
 
-    Copyright (C) 2009-2012 IIPImage.
+    Copyright (C) 2009-2013 IIPImage.
     Authors: Ruven Pillay & Petr Pridal
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
+    the Free Software Foundation; either version 3 of the License, or
     (at your option) any later version.
 
     This program is distributed in the hope that it will be useful,
